--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/leafs/data-binding.git"
+    "url": "git://github.com/bredele/data-binding.git"
   },
   "keywords": [
     "dataset",
     "binding",
     "interpolation"
   ],
-  "author": "Olivier Wietrich - PetroFeed",
+  "author": "Olivier Wietrich",
   "license": "BSD",
   "readmeFilename": "Readme.md",
   "bugs": {
-    "url": "https://github.com/leafs/data-binding/issues"
+    "url": "https://github.com/bredele/data-binding/issues"
   },
   "devDependencies": {
     "mocha": "~1.12.0"
