--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "datastore": "^1.0.0",
     "indexof": "0.0.1",
-    "supplant": "~0.1.2",
-    "trim": "0.0.1"
+    "supplant": "~0.1.2"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
