--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "test-local": "zuul --local -- test/*.js"
   },
   "dependencies": {
-    "indexof": "0.0.1",
-    "supplant": "~0.1.2",
-    "datastore": "^1.0.2"
+    "domwalk": "0.2.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
