--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test-local": "zuul --local -- test/*.js"
   },
   "dependencies": {
-    "domwalk": "0.2.0"
+    "domwalk": "0.2.0",
+    "stomach": "^0.1.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
